# SimpleNetwork

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSimpleNetwork.cmake
include/: network.hpp  network_linux.hpp
source/: network.cpp  network_base.cpp  network_linux.cpp
